<resources>
    <string name="hello_world">Hello %s</string>
    <string name="app_name">DropBit</string>
    <string name="btn_new_wallet">New Wallet</string>
    <string name="btn_restore">Restore Wallet</string>
    <string name="settings_title">Settings</string>
    <string name="backup_recovery_words_title">Recovery Words</string>
    <string name="spend_bitcoin_header">Spend Your Bitcoin</string>
    <string name="pay_contacts_title">Contacts</string>
    <string name="restore_wallet_title">Restore From Backup</string>
    <string name="close">close</string>
    <string name="set_pin_header">Set Your Pin</string>
    <string name="set_pin_headline">Your PIN will be used to access DropBit and send Bitcoin.</string>
    <string name="pin_body_confirm">Your PIN will be used to access DropBit and send Bitcoin.</string>
    <string name="pin_header_confirm">Re-Enter Pin</string>
    <string name="pin_mismatch_error">Incorrect PIN. Please try again.</string>
    <string name="pin_mismatch_error_fatal">Incorrect PIN entered 3 times.  Please create a new pin.</string>
    <string name="pin_mismatch_error_toast_fatal_re_enter">Incorrect PIN entered 3 times.</string>
    <string name="privacy_disclaimer">Privacy is important to us. Your number is securely hashed and encrypted before it is stored</string>
    <string name="account_verification_overview">Verify your phone number and twitter name to send Bitcoin to mobile and twitter contacts without an address</string>
    <string name="verify_phone_button_title">VERIFY PHONE NUMBER</string>
    <string name="fingerprint_negative_button">cancel</string>
    <string name="use_touch_to_unlock">Confirm fingerprint to continue</string>
    <string name="enable_biometric_header">Enable Fingerprint</string>
    <string name="sign_in">Sign In</string>
    <string name="touch_sensor">touch sensor</string>
    <string name="touch_icon">touch icon</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="fingerprint_error">Fingerprint not recognized.  Try again</string>
    <string name="message_successful_wallet_backup">Success! Be sure to keep your recovery words in a safe place.</string>
    <string name="message_dont_forget_to_backup">Remember to backup your wallet to ensure your Bitcoin is secure in case your phone is ever lost or stolen. Click here to backup now.</string>
    <string name="verify_recovery_words_header">Verify Words</string>
    <string name="verify_recovery_words_instructions">Select the correct word.</string>
    <string name="verify_recovery_words_fail_message">Incorrect word. Are you sure you have your words?</string>
    <string name="verify_recovery_words_fail_positive_button">GOT IT</string>
    <string name="verify_recovery_words_fail_negative_button">SEE WORDS</string>
    <string name="verify_recovery_words_error_message">Too many attempts. Please review your recovery words and ensure you write them down.</string>
    <string name="verify_recovery_words_error_positive_button">OK</string>
    <string name="verify_recovery_words_select_word">Select word</string>
    <string name="recovery_words_body">Be sure to write your words \ndown on a piece of paper.</string>
    <string name="word_0_of_0">word 0 of 0</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="verify">VERIFY</string>
    <string name="only_me_memo">Will be seen by only you.</string>
    <string name="shared_memo">Will be seen by %s</string>
    <string name="start_screen_headline">The simplest way to send and receive Bitcoin</string>
    <string name="locked_out_message">Too many incorrect attempts. Please wait 5 minutes and try entering your pin again.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">&#183;</string>
    <string name="current_price_title">Current Price</string>
    <string name="backup_up_wallet_cta_drawer_button">Back Up Wallet</string>
    <string name="default_price">N/A</string>
    <string name="app_version_label">Version %s</string>
    <string name="drawer_open_descritpion">sidebar open</string>
    <string name="drawer_close_descritpion">sidebar closed</string>
    <string name="pay_label">Send</string>
    <string name="request_label">Receive</string>
    <string name="pay_header">Send</string>
    <string name="pay_address_hint">To: BTC address or phone #</string>
    <string name="memo_hint">Add a memo</string>
    <string name="security_label">Securely send this memo with your transaction</string>
    <string name="paste_btn_label">PASTE</string>
    <string name="pay_send_btn_label">SEND</string>
    <string name="pay_dialog_send_btn_label">NEXT</string>
    <string name="pay_scan_btn_label">SCAN</string>
    <string name="pay_contacts_label">Contacts</string>
    <string name="drawer_setting_label">Settings</string>
    <string name="drawer_phone_label">Verify</string>
    <string name="drawer_support_label">Support</string>
    <string name="drawer_where_to_buy_label">Spend</string>
    <string name="channel_invites">Contact/Phone Number DropBits</string>
    <string name="channel_invites_description">Allow DropBit to notify when DropBits have been sent and/or received</string>
    <string name="push_notification_channel_id">Allow DropBit Push Notifications</string>
    <string name="notification_invite_fulfilled_title">BTC Sent</string>
    <string name="notification_invite_fulfilled_ticker">BTC Sent</string>
    <string name="notification_transaction_failed_to_broadcast">Bitcoin network failed to broadcast transaction: %1$s. Please try sending again.</string>
    <string name="scan_qr_label">Scan Qr Code</string>
    <string name="empty_transactions_header">No Bitcoin... Yet!</string>
    <string name="empty_transactions_paragraph">All incoming and outgoing transactions will appear here.</string>
    <string name="send_to_self">Sent to myself</string>
    <string name="share_transaction_intent_title">Share Transaction</string>
    <string name="history_failed_to_broadcast">Failed to Broadcast</string>
    <string name="failed">failed</string>
    <string name="expired">expired</string>
    <string name="canceled">canceled</string>
    <string name="request_copied_message">Bitcoin Request copied to clipboard</string>
    <string name="tap_address_to_save_to_clipboard">Tap address to save to clipboard</string>
    <string name="send_request">Send Request</string>
    <string name="create_invoice">create invoice</string>
    <string name="add_receive_amount">Add Receive Amount</string>
    <string name="add_a_memo">Add a memo</string>
    <string name="pay_not_enough_funds_error">Not enough spendable funds</string>
    <string name="pay_not_available_funds_error">Available </string>
    <string name="pay_not_attempting_to_send">Attempting to send </string>
    <string name="invalid_bitcoin_address_error">Invalid BTC address</string>
    <string name="clipboard_empty_error_message">Nothing to paste</string>
    <string name="confirm_pay_hold_label_message_successful">TAP AND HOLD TO SEND</string>
    <string name="confirm_pay_fee">Network fee %s (%s)</string>
    <string name="activity_verification_header">Verification</string>
    <string name="verification_example">Example: %s</string>
    <string name="activity_verify_headline">
        To unlock all the features on DropBit please verify using your phone number or twitter account
    </string>
    <string name="activity_verify_phone_error_message">Invalid phone number. Please make sure you have entered the correct number.</string>
    <string name="preference_display_phone_number_label">Verified Number: </string>
    <string name="default_401_user_deverifcation_message">
        An account associated with this device has been unregistered.
    </string>
    <string name="mismatch_401_user_deverifcation_message">
        An account associated with this device is no longer registered.
        A new device has been registered with that account.
    </string>
    <string name="activity_verify_phone_code_headline">
        We’ve sent a six digit verification code
        to (%1$s). It may take up to 30 seconds to receive the text.
    </string>
    <string name="activity_verify_phone_code_header">Verification Code</string>
    <string name="activity_verify_phonecode_error_basic">Incorrect Code.  Please try again</string>
    <string name="activity_verify_phonecode_error_message_reset">Resend Text Message</string>
    <string name="activity_verify_phonecode_error_server">The verification code could not be sent. Please try again later.</string>
    <string name="activity_verify_phonecode_error_server_blacklist">DropBit does not currently support phone numbers in your country. You can still use DropBit as a Bitcoin wallet, but some features will be limited. Please skip the phone verification process above to continue.</string>
    <string name="activity_verify_code_sent">You will receive a verification code SMS shortly.</string>
    <string name="activity_verify_phonecode_expired">Your 6 digit code has expired please try again.</string>
    <string name="activity_verify_phonecode_ratelimit">Verification codes can only be requested every 30 seconds.</string>
    <string name="verify_phone_code_too_many_tries">Too many unsuccessful attempts to verify. Please wait 24 hours and try again.</string>
    <string name="preference_wallet_label">Wallet</string>
    <string name="not_backedup">(Not Backed Up)</string>
    <string name="preference_sync_now_label">Sync Now</string>
    <string name="delete_wallet">DELETE WALLET</string>
    <string name="ok">OK</string>
    <string name="view_recovery_words">view recovery words</string>
    <string name="recovery_words_instructions_title">You will be given a list of 12 words to write down on paper and keep in a safe place.</string>
    <string name="recovery_words_instructions_disclaimer">It’s important to never store your recovery words digitally or online.</string>
    <string name="recovery_words_instructions_best_practaces">Using your recovery words is the only way to restore your DropBit wallet if your phone is lost, broken, stolen or upgraded.</string>
    <string name="please_take_note">please take note</string>
    <string name="recovery_words_instructions_time_to_complete">This takes approximately 3 minutes.</string>
    <string name="skip_and_backup_later">SKIP AND BACK UP LATER</string>
    <string name="deverification_dialog_pending_dropbit_canceled_warning_message">If you change or remove your current Twitter account, all pending DropBits will be canceled.</string>
    <string name="deverification_dialog_pending_dropbit_canceled_message">In order to change your phone number we must first remove it from your account.</string>
    <string name="get_bitcoin_title">Get Bitcoin</string>
    <string name="learn_bitcoin_title">Learn Bitcoin</string>
    <string name="spend_bitcoin_title">Spend Bitcoin</string>
    <string name="buy_giftcards_title">BUY GIFTCARDS</string>
    <string name="online_title">ONLINE</string>
    <string name="around_me_title">AROUND ME</string>
    <string name="_5_dollars">$5</string>
    <string name="_20_dollars">$20</string>
    <string name="_50_dollars">$50</string>
    <string name="_100_dollars">$100</string>
    <string name="oh_and_we_ll_cover_the_fees_every_time_you_load">OH, and we’ll cover the fees every time you load</string>
    <string name="nothing_s_here_yet_load_your_lightning_wallet">NOTHING’S HERE YET, LOAD
        YOUR LIGHTNING WALLET</string>
    <string name="custom_amount">Custom Amount</string>
</resources>