<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_state_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <TextView
        android:id="@+id/lightning_empty_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        android:gravity="center_horizontal"
        android:text="@string/nothing_s_here_yet_load_your_lightning_wallet"
        android:textAppearance="@style/TextAppearance.Lightning.Tx.EmptyState.Header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/oh_and_we_ll_cover_the_fees_every_time_you_load"
        android:textAppearance="@style/TextAppearance.Lightning.Tx.EmptyState.Message" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/quick_load_5"
            style="@style/Button.Lightning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/_5_dollars" />

        <Button
            android:id="@+id/quick_load_20"
            style="@style/Button.Lightning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:text="@string/_20_dollars" />


        <Button
            android:id="@+id/quick_load_50"
            style="@style/Button.Lightning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_50_dollars" />

        <Button
            android:id="@+id/quick_load_100"
            style="@style/Button.Lightning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_100_dollars" />

    </LinearLayout>

    <Button
        android:id="@+id/custom_amount"
        style="@style/FlatButton.EmptySate"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_amount" />
</LinearLayout>