<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/vertical_margin_large">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/recovery_words_instructions_title" />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:gravity="center_horizontal"
        android:text="@string/recovery_words_instructions_disclaimer"
        android:textAppearance="@style/TextAppearance.Small.PrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_below="@id/disclaimer"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/take_note_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/please_take_note"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_take_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_medium"
            android:gravity="center_horizontal"
            android:text="@string/recovery_words_instructions_best_practaces" />

        <TextView
            android:id="@+id/time_to_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_medium"
            android:gravity="center_horizontal"
            android:text="@string/recovery_words_instructions_time_to_complete"
            android:textAppearance="@style/TextAppearance.Small.PrimaryDark"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/buttons"
        android:gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/view_recovery_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_recovery_words" />

        <Button
            android:id="@+id/skip_and_backup_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_margin"
            android:visibility="gone"
            style="@style/FlatButton"
            android:text="@string/skip_and_backup_later" />
    </LinearLayout>
</RelativeLayout>