<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginLeft="@dimen/horizontal_margin_xxlarge"
android:layout_marginRight="@dimen/horizontal_margin_xxlarge"
android:gravity="center"
android:orientation="vertical"
android:visibility="visible">

<Button
    android:id="@+id/buy_giftcard_button"
    android:layout_width="match_parent"
    android:drawableLeft="@drawable/green_bitcoin"
    android:backgroundTint="@color/primary_green"
    android:layout_height="wrap_content"
    android:text="@string/buy_giftcards_title" />

<com.coinninja.coinkeeper.view.widget.MerchantLogoView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

<Button
    android:id="@+id/around_me_button"
    android:layout_width="match_parent"
    android:layout_marginTop="30px"
    android:layout_marginBottom="30px"
    android:drawableLeft="@drawable/map_pin"
    android:layout_height="wrap_content"
    android:text="@string/around_me_title" />

<Button
    android:id="@+id/online_button"
    android:layout_width="match_parent"
    android:layout_marginTop="30px"
    android:drawableLeft="@drawable/ic_phone"
    android:backgroundTint="@color/colorPrimaryDark"
    android:layout_height="wrap_content"
    android:text="@string/online_title" />
</LinearLayout>